<resources>
    <string name="app_name">HW4</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="the_information_book_app">The information book app</string>
    <string name="the_countries">The Countries</string>
    <string name="the_leaders">The Leaders</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="the_museums">The Museums</string>
    <string name="the_seven_wonders_of_the_world">The Seven Wonders of The World</string>
    <string name="uk">UK</string>
    <string name="france">France</string>
    <string name="italy">italy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="italytest">ITALY</string>
    <string name="notjing">NOTJING</string>
    <string name="ukflag">TODO</string>
    <string name="capital_london_n">Capital : London\n</string>
    <string name="largest_city_london_n">Largest City : London\n</string>
    <string name="national_language_english_n">National Language : English\n</string>
    <string name="total_area_242_495_km_n">Total Area : 242,495 km²\n</string>
    <string name="currency_gbp_n">Currency : GBP\n</string>
    <string name="n_the_united_kingdom_of_great_britain_and_northern_ireland_commonly_known_as_the_united_kingdom_uk_or_britain_is_a_country_in_northwestern_europe_off_the_coast_of_the_continental_mainland_it_comprises_england_scotland_wales_and_northern_ireland_the_uk_includes_the_island_of_great_britain_the_north_eastern_part_of_the_island_of_ireland_and_most_of_the_smaller_islands_within_the_british_isles_covering_244_376_km_northern_ireland_shares_a_land_border_with_the_republic_of_ireland_otherwise_the_united_kingdom_is_surrounded_by_the_atlantic_ocean_the_north_sea_the_english_channel_the_celtic_sea_and_the_irish_sea">\n The United Kingdom of Great Britain and Northern Ireland, commonly known as the United Kingdom (UK) or Britain, is a country in Northwestern Europe, off the coast of the continental mainland. It comprises England, Scotland, Wales, and Northern Ireland. The UK includes the island of Great Britain, the north-eastern part of the island of Ireland, and most of the smaller islands within the British Isles, covering 244,376 km². Northern Ireland shares a land border with the Republic of Ireland; otherwise, the United Kingdom is surrounded by the Atlantic Ocean, the North Sea, the English Channel, the Celtic Sea, and the Irish Sea.</string>
    <string name="italyflag">TODO</string>
    <string name="capital_rome_n">Capital : Rome\n</string>
    <string name="largest_city_rome_n">Largest City : Rome\n</string>
    <string name="national_language_italian_n">National Language : Italian\n</string>
    <string name="total_area_301_340_km_n">Total Area : 301,340 km²\n</string>
    <string name="currency_euro_eur_n">Currency : Euro (EUR)\n</string>
    <string name="n_italy_a_officially_the_italian_republic_b_is_a_country_in_southern_and_western_europe_c_it_consists_of_a_peninsula_that_extends_into_the_mediterranean_sea_with_the_alps_on_its_northern_land_border_as_well_as_nearly_800_islands_notably_sicily_and_sardinia_italy_shares_land_borders_with_france_to_the_west_switzerland_and_austria_to_the_north_slovenia_to_the_east_and_the_two_enclaves_of_vatican_city_and_san_marino_it_is_the_tenth_largest_country_in_europe_by_area_covering_301_340_km2_116_350_sq_mi_and_the_third_most_populous_member_state_of_the_european_union_with_nearly_59_million_inhabitants_italy_s_capital_and_largest_city_is_rome_other_major_cities_include_milan_naples_turin_palermo_bologna_florence_genoa_and_venice_the_history_of_italy_goes_back_to_numerous_italic_peoples_notably_including_the_ancient_romans_who_conquered_the_mediterranean_world_during_the_roman_republic_and_ruled_it_for_centuries_during_the_roman_empire_with_the_spread_of_christianity_rome_became_the_seat_of_the_catholic_church_and_the_papacy_barbarian_invasions_and_other_factors_led_to_the_decline_and_fall_of_the_western_roman_empire_between_late_antiquity_and_the_early_middle_ages_by_the_11th_century_italian_city_states_and_maritime_republics_expanded_bringing_renewed_prosperity_through_commerce_and_laying_the_groundwork_for_modern_capitalism_the_italian_renaissance_flourished_during_the_15th_and_16th_centuries_and_spread_to_the_rest_of_europe_italian_explorers_discovered_new_routes_to_the_far_east_and_the_new_world_contributing_significantly_to_the_age_of_discovery_after_centuries_of_political_and_territorial_divisions_italy_was_almost_entirely_unified_in_1861_following_wars_of_independence_and_the_expedition_of_the_thousand_establishing_the_kingdom_of_italy_from_the_late_19th_to_the_early_20th_century_italy_rapidly_industrialised_mainly_in_the_north_and_acquired_a_colonial_empire_while_the_south_remained_largely_impoverished_fueling_a_large_immigrant_diaspora_to_the_americas_from_1915_to_1918_italy_took_part_in_world_war_i_with_the_entente_against_the_central_powers_in_1922_the_italian_fascist_dictatorship_was_established_during_world_war_ii_italy_was_first_part_of_the_axis_until_its_surrender_to_the_allied_powers_1940_1943_then_a_co_belligerent_of_the_allies_during_the_italian_resistance_and_the_liberation_of_italy_1943_1945_following_the_war_the_monarchy_was_replaced_by_a_republic_and_the_country_enjoyed_a_strong_recovery_a_developed_country_with_an_advanced_economy_italy_has_the_eighth_largest_nominal_gdp_in_the_world_the_second_largest_manufacturing_sector_in_europe_and_plays_a_significant_role_in_regional_and_to_a_lesser_extent_global_economic_military_cultural_and_political_affairs_italy_is_a_founding_and_leading_member_of_the_european_union_and_is_part_of_numerous_other_international_organizations_and_forums_as_a_cultural_superpower_italy_has_long_been_a_renowned_global_centre_of_art_music_literature_cuisine_fashion_science_and_technology_and_the_source_of_multiple_inventions_and_discoveries_it_has_the_highest_number_of_world_heritage_sites_60_and_is_the_fourth_most_visited_country_in_the_world">\n Italy,[a] officially the Italian Republic,[b] is a country in Southern and Western Europe.[c] It consists of a peninsula that extends into the Mediterranean Sea, with the Alps on its northern land border, as well as nearly 800 islands, notably Sicily and Sardinia. Italy shares land borders with France to the west; Switzerland and Austria to the north; Slovenia to the east; and the two enclaves of Vatican City and San Marino. It is the tenth-largest country in Europe by area, covering 301,340 km2 (116,350 sq mi), and the third-most populous member state of the European Union, with nearly 59 million inhabitants. Italy\'s capital and largest city is Rome; other major cities include Milan, Naples, Turin, Palermo, Bologna, Florence, Genoa, and Venice. The history of Italy goes back to numerous Italic peoples—notably including the ancient Romans, who conquered the Mediterranean world during the Roman Republic and ruled it for centuries during the Roman Empire. With the spread of Christianity, Rome became the seat of the Catholic Church and the Papacy. Barbarian invasions and other factors led to the decline and fall of the Western Roman Empire between late antiquity and the Early Middle Ages. By the 11th century, Italian city-states and maritime republics expanded, bringing renewed prosperity through commerce and laying the groundwork for modern capitalism. The Italian Renaissance flourished during the 15th and 16th centuries and spread to the rest of Europe. Italian explorers discovered new routes to the Far East and the New World, contributing significantly to the Age of Discovery. After centuries of political and territorial divisions, Italy was almost entirely unified in 1861, following wars of independence and the Expedition of the Thousand, establishing the Kingdom of Italy. From the late 19th to the early 20th century, Italy rapidly industrialised—mainly in the north—and acquired a colonial empire, while the south remained largely impoverished, fueling a large immigrant diaspora to the Americas. From 1915 to 1918, Italy took part in World War I with the Entente against the Central Powers. In 1922, the Italian fascist dictatorship was established. During World War II, Italy was first part of the Axis until its surrender to the Allied powers (1940–1943), then a co-belligerent of the Allies during the Italian resistance and the liberation of Italy (1943–1945). Following the war, the monarchy was replaced by a republic and the country enjoyed a strong recovery. A developed country with an advanced economy, Italy has the eighth-largest nominal GDP in the world, the second-largest manufacturing sector in Europe, and plays a significant role in regional and—to a lesser extent—global economic, military, cultural, and political affairs. Italy is a founding and leading member of the European Union, and is part of numerous other international organizations and forums. As a cultural superpower, Italy has long been a renowned global centre of art, music, literature, cuisine, fashion, science and technology, and the source of multiple inventions and discoveries. It has the highest number of World Heritage Sites (60) and is the fourth-most visited country in the world.</string>
    <string name="franceflag">TODO</string>
    <string name="capital_paris_n">Capital : Paris\n</string>
    <string name="largest_city_paris_n">Largest City : Paris\n</string>
    <string name="national_language_french_n">National Language : French\n</string>
    <string name="total_area_551_695_km_n">Total Area : 551,695 km²\n</string>
    <string name="currency_euro_eur_n_france">Currency : Euro (EUR)\n</string>
    <string name="donald_trump">Donald Trump</string>
    <string name="putin">Putin</string>
    <string name="xi_jinping">Xi Jinping</string>
</resources>